--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,8 @@ SubTitle:hover {
 }
 
 Title {
-    background-color: black;
-    color: white;
+    color: black;
     font-bold: bold;
-    font-size: 35pt;
-    border-radius: 10px;
-}
-
-Title:hover {
-    border-radius: 15px;
 }
 
 QStatusBar {
@@ -56,6 +49,21 @@ QSlider::handle:horizontal {
     border-radius: 8px;
 }
 
+MyButton {
+    background: #f5f5f5;
+    color: grey;
+}
+
+MyButton::hover {
+    background: grey;
+    color: #f5f5f5;
+}
+
 QSlider::sub-page:qlineargradient {
     background: #ff7e00;
+}
+
+Frame{
+    background-color: white;
+    border: 2px solid black;
 }
